@@ -1,3 +1,8 @@
+2012-12-04  Alan Modra  <amodra@gmail.com>
+
+	* powerpc.cc (Powerpc_relobj::do_scan_relocs): Delete.
+	(Target_powerpc::do_define_standard_symbols): New function.
+
 2012-12-03  Alan Modra  <amodra@gmail.com>
 
 	* output.h: Formatting, whitespace.
